@@ -5,4 +5,9 @@ import code_dom
 def apply(dom_root, function_names):
     for function in dom_root.list_all_children_of_type(code_dom.DOMFunctionDeclaration):
         if function.get_fully_qualified_name(return_fqn_even_for_member_functions=True) in function_names:
-            function.parent.remove_child(function)
+            if isinstance(function.parent, code_dom.DOMTemplate):
+                # If the function is templated, remove the template too
+                template = function.parent
+                template.parent.remove_child(template)
+            else:
+                function.parent.remove_child(function)
